--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,6 +21,7 @@
 
 /* Primitives */
 @import '../components/Button/Button.css';
+@import '../components/Removable/Removable.css';
 
 /* Layout */
 @import '../components/Root/Root.css';
