--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -50,53 +50,16 @@
   transition: transform .6s var(--ios-easing);
 }
 
-.Cell--ios.Cell--removable {
-  overflow: hidden;
-}
-
-.Cell--ios .Cell__remove {
-  position: absolute;
-  left: 100%;
-  height: 100%;
-  top: 0;
-  background-color: var(--destructive);
-  color: var(--white);
-  padding: 0 10px;
-  line-height: 45px;
-  font-size: 15px;
-  transition: transform .6s var(--ios-easing);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-}
-
-.Cell--ios .Cell__remove-in {
-  flex-shrink: 0;
-}
-
-.Cell--ios .Cell__remove-marker {
-  margin-right: 12px;
-  width: 21px;
-  height: 21px;
-  background-color: var(--destructive);
-  border-radius: 50%;
-  position: relative;
-}
-
-.Cell--ios .Cell__remove-marker::before {
-  position: absolute;
-  left: 6px;
-  top: 10px;
-  width: 9px;
-  height: 1px;
-  background-color: var(--white);
-  content: '';
-  display: block;
-}
-
 .Cell--ios .Cell__marker {
   margin-right: 12px;
+}
+
+.Cell--ios.Cell--removable .Removable {
+  padding-left: 12px;
+}
+
+.Cell--ios.Cell--removable .SimpleCell {
+  padding-left: 0;
 }
 
 /* Android */
@@ -104,11 +67,6 @@
 .Cell--android .Cell__dragger,
 .Cell--vkcom .Cell__dragger {
   padding-right: 16px;
-}
-
-.Cell--android .Cell__remove-marker,
-.Cell--vkcom .Cell__remove-marker {
-  color: var(--icon_secondary);
 }
 
 .Cell--android .Cell__marker,
